--- a/app/css/style.css
+++ b/app/css/style.css
@@ -451,9 +451,11 @@ header .page.absenceStat{
 .nameCard .highab, .nameCard .medab, .nameCard .lowab, .nameCard .noab .icons {
 	border-bottom:1px solid #ebebeb;
 }
+.nameCard .abBorder {
+	border-bottom:2px solid #fff;
+}
 .nameCard ul {
 	padding:5px;
-	border-bottom:2px solid #fff;
 }
 .nameCard ul li {
 	padding:5px 0;
@@ -503,62 +505,4 @@ header .page.absenceStat{
 }
 .nameCard ul li ul li.nudge {
 	padding-top:5px;
-}
-/* CSS Hover Menu */
-
-.cssnav{
-    list-style:none;
-    font-weight:bold;
-    margin-bottom:10px;
-/* Clear floats */
-    float:left;
-    width:100%;
-/* Bring the nav above everything else--uncomment if needed. */
-    position:relative;
-    z-index:5;
-
-}
-.cssnav li{
-    float:left;
-    margin-right:10px;
-    position:relative;
-}
-.cssnav a{
-    display:block;
-    padding:5px;
-    color:#fff;
-    background:#333;
-    text-decoration:none;
-}
-.cssnav a:hover{
-    color:#fff;
-    background:#6b0c36;
-    text-decoration:underline;
-}
-.cssnav ul{
-    background:#fff; /* Adding a background makes the dropdown work properly in IE7+. Make this as close to your page's background as possible (i.e. white page == white background). */
-    background:rgba(255,255,255,0); /* But! Let's make the background fully transparent where we can, we don't actually want to see it if we can help it... */
-    list-style:none;
-    position:absolute;
-    left:-9999px; /* Hide off-screen when not needed (this is more accessible than display:none;) */
-}
-.cssnav ul li{
-    padding-top:1px; /* Introducing a padding between the li and the a give the illusion spaced items */
-    float:none;
-}
-.cssnav ul a{
-    white-space:nowrap; /* Stop text wrapping and creating multi-line dropdown items */
-}
-.cssnav li:hover ul{/* Display the dropdown on hover */
-    left:-40px; /* Bring back on-screen when needed */
-}
-.cssnav li:hover a{ /* These create persistent hover states, meaning the top-most link stays 'hovered' even when your cursor has moved down the list. */
-    background:#6b0c36;
-    text-decoration:underline;
-}
-.cssnav li:hover ul a{ /* The persistent hover state does however create a global style for links even before they're hovered. Here we undo these effects. */
-    text-decoration:none;
-}
-.cssnav li:hover ul li a:hover{ /* Here we define the most explicit hover states--what happens when you hover each individual link. */
-    background:#333;
 }
