--- a/app/css/style.css
+++ b/app/css/style.css
@@ -47,7 +47,43 @@ table{
 .v-align-m {
 	vertical-align: middle;
 }
+.dropdownSelect{
+    width: 165px;
+    height: 15px;
+    overflow: hidden;
+    background: url(../img/arrowDown.png) no-repeat right transparent;
+    border: 0px solid #ccc;
+    margin: 0;
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+}
 
+.dropdownSelect select{
+    background: transparent;
+    width: 190px;
+    padding: 0px;
+    font-size: 12px;
+    line-height: 1;
+    border: 0;
+    border-radius: 0;
+    height: 15px;
+    -webkit-appearance: none;
+    font-weight:normal;
+    cursor:pointer;
+}
+
+
+.sortBy .dropdownSelect{
+    width:100%;
+    position:relative;
+}
+
+.sortBy .dropdownSelect select{
+    position:absolute;
+    right:-22px;
+    width:90%
+}
 
 /*******************
  * Layout
