--- a/app/css/style.css
+++ b/app/css/style.css
@@ -47,6 +47,16 @@ table{
 .v-align-m {
 	vertical-align: middle;
 }
+.v-align-t {
+	vertical-align: top;
+}
+.text-a-c {
+	text-align: center;
+}
+.none {
+	display:none;
+	visibility: hidden;
+}
 .dropdownSelect{
     width: 165px;
     height: 15px;
@@ -125,6 +135,9 @@ footer{
 }
 .margin-left-none {
 	margin-left:0 !important;
+}
+.margin-right-ft {
+	margin-right:15px;
 }
 
 
@@ -432,6 +445,7 @@ header .page.absenceStat{
 
 .widget .graph{
 	margin:0 55px;
+	text-align: center;
 }
 
 .widget .scrollable{
@@ -612,4 +626,51 @@ header .page.absenceStat{
 	background-position: -24px -618px;
 	width:30px;
 	height:30px;
+}
+
+/* MODAL */
+
+#basic-modal-content {display:none;}
+
+/* Overlay */
+#simplemodal-overlay {background-color:#000;}
+
+/* Container */
+#simplemodal-container {height:560px; width:100%; padding:12px;}
+#simplemodal-container .simplemodal-data {padding:8px;}
+#simplemodal-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; font-size:12px; margin-bottom:12px; padding:4px 6px 6px;}
+#simplemodal-container a {color:#ddd;background-color: #000;
+padding: 5px 10px;
+text-decoration: none;
+}
+#simplemodal-container a.modalCloseImg {display:none;}
+#simplemodal-container h3 {color:#84b8d9;}
+
+#simplemodal-container .modalArrow {
+	position: relative;
+	top: 379px;
+	right: 535px;
+}
+#simplemodal-container .detailsArrow {
+	position: relative;
+	bottom: 213px;
+	left: 1010px;
+}
+#simplemodal-container .closeModal {
+	position:relative;
+	top: 510px;
+	right: 285px;
+}
+.widget .graph ul.row {
+	border-bottom:2px dashed #ebebeb;
+	padding:12px;
+}
+.widget .graph ul.nobw {
+	border-bottom:none !important;
+}
+.widget .graph ul .medTxt {
+	font-size:25px;
+}
+.widget .graph ul .lgTxt {
+	font-size:45px;
 }
